# KittyPong

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateBuild.bat  README.md  vcpkg.json
Data/Levels/: kittypong.json
EngineXForStudent/: AIPlayer.cpp  AIPlayer.h  COGBounce.cpp  COGBounce.h  COGBoxShape.cpp  COGBoxShape.h  COGCircleShape.cpp  COGCircleShape.h  COGPhysics.cpp  COGPhysics.h  COGShape.cpp  COGShape.h  COGTransform.h  Component.h  GameEngineX.vcxproj  GameEngineX.vcxproj.filters  GameObject.h  Input.h  Score.cpp  Score.h  ScoreManager.cpp  ScoreManager.h  UserInput.cpp  UserInput.h  World.cpp  World.h
EngineXForStudent/Game/Private/: Game.cpp  Game.h
EngineXForStudent/OutGame/: vc141.idb
EngineXForStudent/OutGame/GameEngineX.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameEngineX.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Source/: AIPlayer.cpp  AIPlayer.h  COGBounce.h  COGBoxShape.cpp  COGBoxShape.h  COGCircleShape.cpp  COGPhysics.h  Component.h  Game.cpp  Game.h  GameObject.h  IPhysicsCollisionEvent.h  Input.h  Main.cpp  PongWorld.cpp  PongWorld.h  Score.cpp  Score.h  ScoreManager.cpp  ScoreManager.h  UserInput.cpp  UserInput.h  World.cpp  World.h
Source/Entity/: Player.cpp  Player.h
Source/Entity/Components/: AIPlayer.cpp  AIPlayer.h  COGBounce.cpp  COGBounce.h  COGBoxShape.cpp  COGBoxShape.h  COGCircleShape.cpp  COGCircleShape.h  COGCollision.h  COGName.h  COGPhysics.cpp  COGPhysics.h  COGShape.cpp  COGShape.h  COGTransform.h  Score.cpp  Score.h
Source/Entity/Systems/: AIPlayerSystem.cpp  AIPlayerSystem.h  (+6 more)
